# OpenRawRadar

./: .env.example  .gitignore  Dockerfile.app  Dockerfile.base  LICENSE  README.md  convert_bag.sh  docker-compose.yml  enterpoint.sh  macvlan_config.sh  network_config.sh
cli/: CMakeLists.txt  firmware_download.cpp  main.cpp  process_bin.py  process_bin.sh
cli/include/: capture_app.h  capture_config.h  capture_session.h
cli/include/platform/: output_owner.h
cli/src/: capture_app.cpp  capture_config.cpp  capture_session.cpp
cli/src/platform/: output_owner_linux.cpp  output_owner_windows.cpp
configs/: AWR2243_mmwaveconfig_max15.txt  AWR2243_mmwaveconfig_max15_MIMO.txt  dca_config.txt
parser_tool/: bag_convert.py  data_parser.py
parser_tool/tools/: __init__.py  rd_vis.py
parser_tool/utils/: __init__.py  parser_common.py  radar_config_parser.py  radar_frame_utils.py  ros_msg_define.py
ros_workspace/src/my_msgs/: CMakeLists.txt  package.xml
ros_workspace/src/my_msgs/msg/: RawRadar.msg  State.msg  TimeStamp.msg
ros_workspace/src/radar_driver_cpp/: CMakeLists.txt  package.xml
ros_workspace/src/radar_driver_cpp/include/radar_driver_cpp/config/: awr2243_config_parser.h
ros_workspace/src/radar_driver_cpp/include/radar_driver_cpp/core/: publisher_capture.h  publisher_config.h
ros_workspace/src/radar_driver_cpp/include/radar_driver_cpp/transport/: ftdi_comm.h  radar_udp.h  socket_platform.h
ros_workspace/src/radar_driver_cpp/include/radar_driver_cpp/transport/kfifo/: test.cpp  unlock_queue.h
ros_workspace/src/radar_driver_cpp/launch/: radar_cpp.launch.py
ros_workspace/src/radar_driver_cpp/src/core/: publisher_capture.cpp  publisher_config.cpp
ros_workspace/src/radar_driver_cpp/src/nodes/: publisher.cpp  subscriber.cpp
ros_workspace/sys_driver/: ftdi_driver.sh
